<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contextClickable="true"
        android:focusable="true"
        android:longClickable="true"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewContact"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/contat_image"
            android:scaleType="centerCrop"
            android:src="@drawable/contact" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/btn_CallPhone"
            android:layout_toEndOf="@+id/imageViewContact"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_CallPhone"
            android:layout_width="85dp"
            android:layout_height="102dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:clickable="true"
            android:contentDescription="@string/callphone"
            android:focusable="true"
            app:backgroundTint="#90F41C"
            app:srcCompat="@android:drawable/stat_sys_phone_call" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>